--- a/portfolio/curriculumn/cvdiego-vidal-lopez.css
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.css
@@ -122,6 +122,7 @@ header .welcome-section .aboutme #objetivo {
     ". pfttl ."
     "pic2 profsec pdtsec"
     ". title ."
+    "p7 p"
     "p1 p2 p3"
     "p4 p5 p6"
     ". trjsec btn"
